css/global.css
/*
===================================
===================================
Global styles

- The is the file for CSS that applies to the entire site.
- Variables, resets, global styles, etc. should be added here.
- This file should be linked to every page on the site.
- We can also add global component styles here (buttons, forms, etc.)
===================================
===================================
*/

/* 
===================================
Resets (box-sizing, normalize, etc.) 
===================================
*/

html {
	box-sizing: border-box;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}

/* 
===================================
Variables (colors, text, spacing, etc.)
===================================
*/

:root {
	/* Color Definitions */
	--color-white: #fff;
	--color-amaranth: #b91515;
	--color-teal: #007a80;
	--color-cybergrape: #6c4681;
	--color-onyx: #1f1d1d;
	--color-yaleblue: #184f85;
	--color-hotpink: #fa6cb7;
	--color-citrine: #d3c53f;
	--color-citron: #92a32d;
	--color-copper: #b37122;
	--color-bluepurple: linear-gradient(180deg, #6c4681 -5.71%, #184f85 103.44%);
	--color-yellowgreen: linear-gradient(
		180deg,
		#d3c53f 0%,
		#d3c53f 26.04%,
		#92a32d 58.85%,
		#b37122 100%
	);

	/* Color Assignment */
	--body-background-color: var(--color-white);
	/* button colors */
	--button1-color: var(--color-white);
	--button1-hover-border: var(--color-white);
	--button2-color: var(--color-amaranth);
	--button2-hover: var(--color-white);
	--button3-color: var(--color-amaranth);
	--button3-hover-border: var(--color-amaranth);

	/* Text */
	--main-font: "Josefin Sans", sans-serif;

	/* Styles for fonts */
	--font-weight-regular: 400;
	--font-weight-medium: 500;
	--font-weight-bold: 700;

	/* Font sizes */
	--font16: 1rem;
	--font21: 1.313rem;
	--font24: 1.5rem;
	--font28: 1.75rem;
	--font36: 2.25rem;
	--font46: 2.875rem;
	--font56: 3.5rem;

	/* Line Height */
	--line-height20: 1.25rem;
	--line-height26: 1.625rem;
	--line-height28: 1.75rem;
	--line-height32: 2rem;
	--line-height40: 2.5rem;
	--line-height50: 3.125rem;
	--line-height58: 3.625rem;

	/* Spacing */
	--spacing10: 10px;
	--spacing20: 20px;
	--spacing40: 40px;
	--spacing65: 65px;
	--spacing80: 80px;
	--spacing84: 84px;
	--spacing100: 100px;
	--spacing164: 164px;
	--spacing185: 185px;
	--spacing213: 213px;

	--spacing-footer: 50px 160px;
	--spacing-header-button: 125px 279px;

	/* Wrappers */
	--wrapper-width-max: 1328px;
	--desktop-wrapper-width: 90%;
	--mobile-wrapper-width: 95%;

	/* Media Queries */
	/* --media-mobile-max:480px;
 --media-tablet-min:768px;
 --media-desktop-min:1024px; */
}

/* 
===================================
Global Styles (html, body, text, links, etc.)
===================================
*/

html {
	font-size: 16px;
}

body {
	background-color: var(--body-background-color);
	font-family: var(--main-font);
}

/* Images */
img {
	max-width: 100%;
	display: block;
}

/* Text */
h1 {
	font-size: var(--font56);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height58);
	color: var(--color-white);
}

h2 {
	font-size: var(--font46);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height50);
	color: var(--color-onyx);
}

h3 {
	font-size: var(--font36);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height40);
	color: var(--color-white);
}

h4 {
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
	color: var(--color-white);
}

h5 {
	font-size: var(--font24);
	font-weight: var(--font-weight-medium);
	line-height: var(--line-height28);
	color: var(--color-onyx);
}

/* Mobile paragraph/body */
p {
	font-size: var(--font16);
	font-weight: var(--font-weight-regular);
	line-height: var(--line-height20);
	color: var(--color-white);
}

/* Links */
a {
	color: var(--color-white);
	text-decoration: none;
}
/* Lists */
footer li {
	list-style-type: none;
	line-height: var(--line-height32);
	text-align: center;
}
footer ul {
	padding-left: 0px;
	padding-inline-start: 0px;
}

/* Forms */

/* 
===================================
Wrappers (container, flexbox, etc.)
===================================
*/

/* Container */

/* Wrappers */
.wrapper {
	width: var(--mobile-wrapper-width);
	margin: 0 auto;
	max-width: var(--wrapper-width-max);
}

/* 
===================================
Global Component Styles (buttons, forms, etc.)
===================================
*/

/* Buttons */
/* footer submit button */
.text-input .button2 {
	border-radius: 10px;
	background-color: var(--button2-color);
	padding: var(--spacing10) var(--spacing40);
	color: var(--color-white);
	border: none;
	min-width: 187px;
	min-height: 50px;
	margin: var(--spacing20);
	font-weight: var(--font-weight-bold);
	font-size: var(--font21);
}

.text-input .button2:hover {
	background-color: var(--color-white);
	color: var(--color-onyx);
}

/* FOOTER STYLES */
footer {
	background-color: var(--color-onyx);
	color: var(--color-white);
}

/* Transition and transform for logo and social links for better visual */
footer a img {
	transition: all 0.1s ease-in;
}
footer a img:hover {
	transform: scale(110%);
}

/* footer main is the container for all content except for very bottom links */
.footer-main {
	padding: var(--spacing40) 0;

	display: flex;
	flex-direction: column;
	align-items: center;
}

/* Logo and land acknowledgement button container*/
.footer-logo-btn {
	display: flex;
	flex-direction: column;
	align-items: center;
}

/* Land Acknowledgement button */
.btn-la {
	background-color: transparent;
	color: var(--color-white);
	border: none;
	margin: var(--spacing40) 0;
	font-size: var(--font21);
}

/* hover effect on all footer links */
.btn-la:hover,
.footer-main ul li a:hover,
.bottom-links a:hover {
	border-bottom: 2px solid var(--color-white);
}



/* Form Styles */
form {
	text-align: center;
	padding: var(--spacing20);
}
.text-input {
	display: flex;
	flex-direction: column;
	align-items: center;
}
.text-input input {
	height: 50px;
	width: 100%;
	border-radius: 10px;
	border: none;
}
#newsletter-input {
	padding-left: 24px;
}

/* bottom links */
.bottom-links {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

.social-svgs {
	display: flex;
	flex-direction: row;
	column-gap: 20px;
}

/* MODAL */
.hidden {
	display: none;
}
/* positioning for body to stop scroll when modal is open */
.fixed {
	position: fixed;
	width: 100%;
}
/* modal overlay */
.overlay-la {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.5);
	backdrop-filter: blur(3px);
	z-index: 1;
}
.modal {
	width: 90%;
	max-width: 1100px;
	max-height: 90vh;
	margin: 0 auto;
	/* was 26px and replaced with variable */
	padding: var(--spacing20);
	position: fixed;
	left: 0;
	right: 0;
	top: 2vh;
	background-color: var(--body-background-color);
	color: var(--color-onyx);
	border: 1px solid var(--body-background-color);
	border-radius: 4px;
	z-index: 2;
}

.modal-wrapper {
	position: relative;
}
.modal-content {
	overflow-y: scroll;
	max-height: 65vh;
}
.modal-scroll {
	max-height: calc(85vh 300px);
}
/* modal text content */
.modal p {
	color: var(--color-onyx);
	margin: var(--spacing20);
}
.modal-header h4 {
	text-align: center;
	color: var(--color-onyx);
	margin-bottom: 0px;
}
.btn-close {
	position: absolute;
	right: -10px;
	top: -40px;
}
.btn-close button {
	border: none;
	background-color: transparent;
}
.btn-close svg {
	width: 32px;
	height: 32px;
}

/* End of modal styles */

/* 
===================================
Media Queries (overriding styles for different screen sizes)
Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/

/* Desktop & Larger */
@media (min-width: 1024px) {
	/* Footer styles */
	.wrapper {
		width: var(--desktop-wrapper-width);
	}
	
	.footer-main {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
	}
	.footer-main h4 {
		font-size: var(--font36);
		font-weight: var(--font-weight-bold);
		line-height: 0px;
		color: var(--color-white);
	}
	.footer-main p {
		margin: 0px;
	}
	footer li {
		text-align: left;
	}

	.footer-logo-btn {
		align-items: start;
	}

	form {
		display: flex;
		flex-direction: column;
		text-align: left;
		/* removing padding on button to align with content */
		padding-right: 0px;
	}
	form p {
		color: var(--color-white);
		width: 60%;
	}
	.text-input {
		display: flex;
		flex-direction: row;
		align-items: center;
	}
	/* removing margin on button to align with content */
	.text-input .button2 {
		margin-right: 0px;
	}
	
	.modal-content {
		overflow-y: auto;
	}

	.modal-scroll {
		padding: var(--spacing20);
	}
	
	/* End of footer styles */
}


/* Tablet Only */
@media screen and (min-width: 768px) and (max-width: 1024px) {
	.modal-scroll {
		padding: var(--spacing20);
	}
}

/* Desktop & Larger */
@media screen and (min-width: 1024px) {
	/* adjusting font sizes and styling for p tags */
	p {
		font-size: var(--font21);
		font-weight: var(--font-weight-regular);
		line-height: var(--line-height26);
		color: var(--color-onyx);
	}
}

/* For larger screens */
@media (min-width: 1280px) {
	footer {
		padding: 0 var(--spacing65);
	}
}

/* https://bholmes.dev/blog/alternative-to-css-variable-media-queries/
Well, it comes down to what the :root element actually means: the root element of the HTML document. But conceptually, media queries aren't attached to HTML elements at all. These declarations are processed while your CSS is being parsed, so it won't know to look to the :root and pull in the variable values. */

